fixed overflow bug in Contribute screen

--- a/src/Diaspora/Contribute/Contribute.module.css
+++ b/src/Diaspora/Contribute/Contribute.module.css
@@ -29,6 +29,8 @@
 
 .Body {
   padding: 10px;
+  overflow-y: scroll;
+  height: 100%;
 }
 
 .dropdownBox,
